<?xml version="1.0"?>
<package format="2">
  <name>whi_modbus_server</name>
  <version>2.2.0</version>
  <description>The whi_modbus_server package</description>
  <maintainer email="xinjue.zou.whi@gmail.com">Xinjue</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>  
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>bondcpp</depend>
  <depend>bond</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>whi_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
